# python-class-2020

math-series/: .gitignore  pyproject.toml
math-series/math_series/: __init__.py  series.py
math-series/tests/: test_series.py
