[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["Chanyoon Zhu <zhqianyu@amazon.com>"]

[tool.poetry.dependencies]
python = "^2.7"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
